recursion.cons.ismember.IsMember.scala.error
Compilation error:
IsMember:8: error: not enough arguments for method isMember: (l: List[Int], v: Int)Boolean.
Unspecified value parameter v.
    return isMember(l.tail)
                   ^